--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -1,10 +1,11 @@
+{% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="./src/img/fa-icon.png" />
+    <link rel="icon" href="{% static 'img/fa-icon.png' %}" />
     <title>MYBONUSREWARD</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
@@ -12,7 +13,116 @@
       integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
       crossorigin="anonymous"
     />
-    <link href="./src/css/style.css" rel="stylesheet" />
+    <link href="{% static 'css/style.css' %}" rel="stylesheet" />
   </head>
 
+  <body>
+    <!-- Navbar -->
+    <div class="container">
+      <div class="row">
+        <nav class="navbar navbar-expand-lg navbar-main">
+          <div class="container-fluid">
+            <a class="navbar-brand pt-2" href="#"
+              ><img
+                src="{% static 'img/logo_min.png' %}"
+                width="200px"
+                height="84px"
+                alt=""
+            /></a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNav"
+              aria-controls="navbarNav"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div
+              class="collapse navbar-collapse justify-content-end"
+              id="navbarNav"
+            >
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#"
+                    >ГЛАВНАЯ</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">ПРОГРАММЫ</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">ПЛАТФОРМА</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">НАГРАДЫ</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">КОНТАКТЫ</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </div>
+    {% block content %}
+    
+    {% endblock %}
+    <footer class="container-fluid bg-skyblue-footer">
+      <div class="row justify-content-center text-center  align-items-center ">
+        <div class="col-12 col-md-12 col-lg-3">
+          <ul class="list-unstyled text-start lh-lg">
+            <li>
+              ООО ПАРТНЕР
+            </li>
+            <li>
+              ИНН 9701183454
+            </li>
+            <li>
+              ОГРН 1217700406770
+            </li>
+            <li>
+              Москва, Переведеновский переулок,
+            </li>
+            <li>
+            дом 13, стр. 4
+            </li>
+          </ul>
+        </div>
+        <div class="col-12 col-md-12 col-lg-3"><img src="{% static 'img/footer.png' %}" alt=""></div>
+        <div class="col-12 col-md-12 col-lg-3">
+          <ul class="list-unstyled text-end lh-lg">
+            <li>
+              Рекламное агентство Партнер ОФИЦИАЛЬНЫЙ
+            </li>
+            <li>
+              ОПЕРАТОР ПЕРСОНАЛЬНЫХ ДАННЫХ
+            </li>
+            <li>
+             hello@par1ner.com
+            </li>
+            <li>
+              info@par1ner.com
+            </li>
+          </ul></div>
+        </div>
+        <div class="row text-center">
+          <div class="col-12 ">
+            <p> Copyright &copy; 2025</p>
+          </div>
+        </div>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
 
+
+
+  
