--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -2,111 +2,106 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="{% static 'img/fa-icon.png' %}" />
-    <title>MYBONUSREWARD</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
-      crossorigin="anonymous"
-    />
-    <link href="{% static 'css/style.css' %}" rel="stylesheet" />
-  </head>
 
-  <body>
-    <!-- Navbar -->
-    <div class="container">
-      <div class="row">
-        <nav class="navbar navbar-expand-lg navbar-main">
-          <div class="container-fluid">
-            <a class="navbar-brand pt-2" href="#"
-              ><img
-                src="{% static 'img/logo_min.png' %}"
-                width="200px"
-                height="84px"
-                alt=""
-            /></a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarNav"
-              aria-controls="navbarNav"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div
-              class="collapse navbar-collapse justify-content-end"
-              id="navbarNav"
-            >
-              <ul class="navbar-nav">
-                {% for item in menu %}
-                  <li class="nav-item">
-                    <a class="nav-link" href="#{{ item.container_id }}">{{ item.title }}</a>
-                  </li>
-                {% endfor %}
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" href="./src/img/fa-icon.png" />
+  <title>MYBONUSREWARD</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
+  <link href="{% static 'css/style.css' %}" rel="stylesheet" />
+  {% for item in analytic %}
+    {{ item.analytic | safe }}<br>
+  {% endfor %}  
+</head>
 
-                <!-- <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"
-                    >ГЛАВНАЯ</a
-                  >
-                </li> -->
-
-
-              </ul>
-            </div>
+<body>
+  <!-- Navbar -->
+  <div class="container">
+    <div class="row">
+      <nav class="navbar navbar-expand-lg navbar-main">
+        <div class="container-fluid">
+          <a class="navbar-brand pt-2" href="{% url 'main:main_page' %}"><img src="{% static 'img/logo_min.png' %}"
+              width="200px" height="84px" alt="" /></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+              {% for item in menu %}
+              <li class="nav-item border-bottom border-2">
+                <a class="nav-link" href="#{{ item.container_id }}">{{ item.title }}</a>
+              </li>
+              {% endfor %}
+            </ul>
           </div>
-        </nav>
+        </div>
+      </nav>
+    </div>
+  </div>
+  {% block content %}
+
+  {% endblock %}
+  <footer class="container-fluid bg-skyblue-footer">
+    <div class="row justify-content-center text-center  ul-content ">
+      <div class="col-12 col-md-12 col-lg-3">
+        <ul class="list-unstyled text-start lh-lg">
+          <li>
+            {{ footer.left | safe}}
+          </li>
+        </ul>
+      </div>
+      <div class="col-12 col-md-12 col-lg-3 mt-lg-5"><img src="{{ logo_footer.image.url }}" alt=""></div>
+      <div class="col-12 col-md-12 col-lg-3">
+        <ul class="list-unstyled text-end lh-lg">
+          <li>
+            {{ footer.right | safe}}
+          </li>
+        </ul>
       </div>
     </div>
-    {% block content %}
-    
-    {% endblock %}
-    <footer class="container-fluid bg-skyblue-footer">
-      <div class="row justify-content-center text-center  align-items-center ">
-        <div class="col-12 col-md-12 col-lg-3">
-          <ul class="list-unstyled text-start lh-lg">
-            <li>
-              {{ footer.Left | safe}}
-            </li>
-          </ul>
-        </div>
-        <div class="col-12 col-md-12 col-lg-3"><img src="{% static 'img/footer.png' %}" alt=""></div>
-        <div class="col-12 col-md-12 col-lg-3">
-          <ul class="list-unstyled text-end lh-lg">
-            <li>
-              Рекламное агентство Партнер ОФИЦИАЛЬНЫЙ
-            </li>
-            <li>
-              ОПЕРАТОР ПЕРСОНАЛЬНЫХ ДАННЫХ
-            </li>
-            <li>
-             hello@par1ner.com
-            </li>
-            <li>
-              info@par1ner.com
-            </li>
-          </ul></div>
-        </div>
-        <div class="row text-center">
-          <div class="col-12 ">
-            <p> Copyright &copy; 2025</p>
-          </div>
-        </div>
-    </footer>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+
+  </footer>
+  <div class="container-fluid copy">
+    <div class="row justify-content-center">
+      <div class="col-12 text-center mt-3">
+        <p> Copyright &copy; 2025</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="position-fixed top-50 end-0"
+    style=" transform: translateY(-50%) rotate(-90deg) translateX(50%); margin-right: 10px; transform-origin: right center; z-index:1050;">
+    <button class="btn text-white p-2 pt-1 fw-bold" data-bs-target="#exampleModalToggle" data-bs-toggle="modal"
+      style="background-color: #08ADDC; font-size: 13px;">Свяжитесь с нами</button>
+  </div>
+  <div class="position-fixed end-0 top-100 translate-middle-y" onclick="window.scrollTo({top: 0, behavior: 'smooth'})"
+    id="scrollToTop"
+    style="transform: translateY(-50%) rotate(-90deg); transform-origin: right center; z-index:1050; margin-top: -50px; background-color: #08ADDC; margin-right: 20px;">
+    <button class="btn  text-white p-2"><img src="{% static 'img/up.png' %}" width="18px" height="18px" alt=""></button>
+  </div>
+
+  <script>
+    // hide wen scroll to top button
+    window.addEventListener("scroll", function () {
+      const scrollToTopButton = document.getElementById("scrollToTop");
+      if (document.documentElement.scrollTop > 100) {
+        scrollToTopButton.style.display = "block";
+      } else {
+        scrollToTopButton.style.display = "none";
+      }
+    });
+  </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+    crossorigin="anonymous">
+  </script>
+
+
+
+</body>
+
 </html>
-
-
-
-  
