--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -573,7 +573,29 @@
     </div>
     <div class="section-ten">
       <div class="container-fluid bg-skyblue mb-5 border-bottom " style="height: 365px;">
-        <div class="row "></div>
+        <div class="row ">
+
+        </div>  <div class="container">
+            <div class="row">
+               <div class="icons">
+            <img src="{% static '/img/logo/icon1.png' %}" alt="">
+            <img src="{% static '/img/logo/icon2.png' %}" alt="">
+            <img src="{% static '/img/logo/icon3.png' %}" alt="">
+            <img src="{% static '/img/logo/icon4.png' %}" alt="">
+            <img src="{% static '/img/logo/icon5.png' %}" alt="">
+            <img src="{% static '/img/logo/icon6.png' %}" alt="">
+            <img src="{% static '/img/logo/icon7.png' %}" alt="">
+            <img src="{% static '/img/logo/icon8.png' %}" alt="">
+            <img src="{% static '/img/logo/icon9.png' %}" alt="">
+            <img src="{% static '/img/logo/icon10.png' %}" alt="">
+            <img src="{% static '/img/logo/icon11.png' %}" alt="">
+            <img src="{% static '/img/logo/icon12.png' %}" alt="">
+            <img src="{% static '/img/logo/icon13.png' %}" alt="">
+            <img src="{% static '/img/logo/icon14.png' %}" alt="">
+            <img src="{% static '/img/logo/icon15.png' %}" alt="">
+          </div>
+            </div>
+          </div>
       </div>
       <div class="container mb-5" style="margin-top: -62px;" id="3">
         <div class="box-border">
@@ -698,6 +720,10 @@
               <label for="message" class="form-label">Сообщение</label>
               <textarea name="message" class="form-control border-dark-subtle" id="message" rows="3" required></textarea>
             </div>
+            <div>
+            <input type="checkbox" id="agreement" required>
+            <label for="agreement">Я согласен с <a href="https://bonus.lumos.com.ge/extra/terms/" target="_blank">условиями обработки данных</a></label>
+          </div>
             <div class="text-center">
               <button type="submit" class="btn btn-primary rounded-4 mt-lg-5 mb-lg-5 fs-6 fw-medium"
                 style="background-color: #121f57;">Отправить</button>
