add copyrights, update base for 3 container inlines

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -67,7 +67,7 @@
   <div class="container-fluid copy">
     <div class="row justify-content-center">
       <div class="col-12 text-center mt-3">
-        <p> Copyright &copy; 2025</p>
+        <p> Copyright: Created by  <a href="https://lumos.com.ge" target="_blank" rel="noopener noreferrer">Lumos</a></p>
       </div>
     </div>
   </div>
